--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.0-beta7</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
     
 </project>
