--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
         <mainClass>org.gesis.reshaperdf.App</mainClass>
-        <sesame.version>2.8.5</sesame.version>
+        <sesame.version>2.8.9</sesame.version> <!--2.8.4-->
     </properties>
     
 
@@ -128,6 +128,7 @@
             <artifactId>opencsv</artifactId>
             <version>3.7</version>
         </dependency>
+
     </dependencies>
     
 </project>
