Added license information

--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
     
 
     <organization>
-        <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>Gesis</name>
+        <name>GESIS</name>
     </organization>
 
     <build>
