--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,16 @@ repositories {
     mavenCentral()
 }
 
+
+shadowJar {
+    mergeServiceFiles()
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+
 dependencies {
     compile group: 'com.github.jsonld-java', name: 'jsonld-java', version:'0.8.3'
     compile group: 'org.openrdf.sesame', name: 'sesame-rio-ntriples', version:'2.8.9'
